--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -99,7 +99,7 @@ section
   margin-top: var(--text-gap);
 }
 
-main > section {
+:is(main, article) > section {
   padding: var(--indent);
 }
 
@@ -198,6 +198,7 @@ h6 {
   line-height: 1.7;
   font-family: var(--default-font-family);
   color: rgb(var(--heading-color));
+  text-wrap: balance;
 }
 
 h1 {
