Move type references to correct file

--- a/src/shared/astro/Navigation.astro
+++ b/src/shared/astro/Navigation.astro
@@ -96,7 +96,7 @@ const Wrapper = depth ? Fragment : "nav";
 
 // {!depth && <Debug {pages} />}
 
-console.log(Astro.locals.collections);
+// console.log(Astro.locals.collections);
 ---
 
 <Wrapper role="navigation" aria-label="Main menu">
