--- a/src/shared/astro/Page.astro
+++ b/src/shared/astro/Page.astro
@@ -4,9 +4,10 @@ import { bookshopName } from "@mws-astro/util";
 export interface Props {
   "bookshop:live"?: any;
   contentBlocks: any[];
+  _livetest: any;
 }
 
-const { contentBlocks } = Astro.props;
+const { contentBlocks, _livetest } = Astro.props;
 
 const components: Record<string, any> = {};
 const componentImports = import.meta.glob(
@@ -47,11 +48,7 @@ Object.entries(componentOverrides).forEach(
       const Component = components[block._bookshop_name];
       if (Component) {
         return (
-          <Component
-            {...block}
-            _content_blocks={contentBlocks}
-            key={String(i)}
-          />
+          <Component {...block} _content_blocks={_livetest} key={String(i)} />
         );
       }
       const warnstring = `[${Astro.self.name}] Component ${block._bookshop_name} could not be found!`;
