Remove tests and update navigation

--- a/src/components/astrotest/astrotest.astro
+++ b/src/components/astrotest/astrotest.astro
@@ -1,18 +1,12 @@
 ---
 export interface Props {
   text: string;
-  _pages: any[];
-  _blocks: any[];
 }
 
-const { text, _pages, _blocks } = Astro.props;
+const { text } = Astro.props;
 
 // @ts-expect-error
 const ENV_EDITOR: boolean = ENV_BOOKSHOP_LIVE || false;
-
-// const middleware = Object.keys(Astro.locals).toString();
-const pages = typeof _pages;
-const contentBlocks = typeof _pages;
 ---
 
 <div>
@@ -20,9 +14,7 @@ const contentBlocks = typeof _pages;
     Live Editing Status: <span id="astro-test">{String(ENV_EDITOR)}</span>
   </p>
   <p>Test data: <span>{text}</span></p>
-  <!-- <p>Middleware: <span>{//middleware}</span></p> -->
-  <p>Pages: <span>{pages}</span></p>
-  <p>Content Blocks: <span>{contentBlocks}</span></p>
+  <p>Middleware: <span>{typeof Astro.locals}</span></p>
 </div>
 
 <style>
