--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -11,18 +11,16 @@ type Props = {
   id?: string;
   paths?: any[];
   currentPath?: string;
-  _pages: CollectionEntry<"pages">[];
 };
 
 if (!Astro.props.frontmatter) {
   throw new Error("Page frontmatter must be defined");
 }
 const props = Astro.props.frontmatter;
-const { id, paths, currentPath, _pages } = Astro.props;
+const { id, paths, currentPath } = Astro.props;
 // const _livetest = await getCollection("pages");
 ---
 
 <Layout {...props} {id} {paths} {currentPath}>
-  <p>{typeof _pages}</p>
-  <Page bookshop:live contentBlocks={props.content_blocks} {_pages} />
+  <Page bookshop:live contentBlocks={props.content_blocks} />
 </Layout>
